# IMSOETL

./: .gitignore  .pre-commit-config.yaml  ENHANCED_FEATURES.md  LICENSE  Makefile  PIPELINE_EXECUTION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  comprehensive_demo.py  demo.py  demo_enhanced.py  demo_report.json  fix_datetime.py  llm_demo.py  pipeline_execution_demo.py  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  sample-config.yaml  sample_pipeline.yaml  summary.py  test_full_llm_integration.py  test_llm_integration.py  test_pipeline_basic.py
config/: default.yaml
demo_data/: sales.csv
src/imsoetl/: __init__.py  __main__.py  _version.py  cli.py
src/imsoetl/agents/: __init__.py  discovery.py  execution.py  monitoring.py  quality.py  schema.py  transformation.py
src/imsoetl/communication/: __init__.py  message_bus.py
src/imsoetl/connectors/: __init__.py  base.py  factory.py  mysql.py  postgresql.py  sqlite.py
src/imsoetl/core/: __init__.py  agent_manager.py  base_agent.py  config.py  errors.py  orchestrator.py
src/imsoetl/engines/: __init__.py  duckdb_engine.py  manager.py  spark_engine.py
src/imsoetl/llm/: __init__.py  manager.py  providers.py
tests/: test_basic.py  test_core.py
